[package]
name = "blockme"
version = "0.1.0"
authors = ["Popov Philipp <philolippo@gmail.com>"]
edition = "2018"
description = "blockme mandatory description"
repository = "https://github.com/pophilpo/blockme"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
