[package]
name = "blockme"
version = "0.1.0"
authors = ["Popov Philipp <philolippo@gmail.com>"]
edition = "2018"
repository = "https://github.com/pophilpo/blockme"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
